--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,71 @@
 attrs==19.3.0
 backcall==0.1.0
+bleach==3.1.5
 certifi==2020.4.5.1
 chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
 filelock==3.0.12
 gdown==3.11.1
 idna==2.9
 importlib-metadata==1.6.1
+int-date==0.1.8
 ipykernel==5.3.0
 ipython==7.15.0
 ipython-genutils==0.2.0
 jedi==0.17.0
+Jinja2==2.11.2
 jsonschema==3.2.0
 jupyter-client==6.1.3
+jupyter-contrib-core==0.3.3
 jupyter-core==4.6.3
+jupyter-nbextensions-configurator==0.4.1
+jupytext==1.5.0
 kiwisolver==1.2.0
 lxml==4.5.1
+MarkupSafe==1.1.1
 matplotlib==3.2.1
+mistune==0.8.4
 multitasking==0.0.9
+nbconvert==5.6.1
 nbformat==5.0.6
+notebook==6.0.3
 numpy==1.18.5
+packaging==20.4
 pandas==1.0.4
 pandas-datareader==0.8.1
+pandocfilters==1.4.2
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
 plotly==4.8.1
+prometheus-client==0.8.0
 prompt-toolkit==3.0.5
-psutil==5.7.0
 ptyprocess==0.6.0
 Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
-PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 pyzmq==19.0.1
 requests==2.23.0
 retrying==1.3.3
-scipy==1.4.1
+scipy==1.5.0
 seaborn==0.10.1
+Send2Trash==1.5.0
 six==1.15.0
+stockstats==0.3.1
+terminado==0.8.3
+testpath==0.4.4
+toml==0.10.1
 tornado==6.0.4
 tqdm==4.46.1
 traitlets==4.3.3
 urllib3==1.25.9
 wcwidth==0.2.3
-yfinance @ git+https://github.com/michaelsru/yfinance@f57d2ddbc345c64c2bc682b750782a385b2aacd8
+webencodings==0.5.1
+yfinance @ git+https://github.com/michaelsru/yfinance.git@f57d2ddbc345c64c2bc682b750782a385b2aacd8
 zipp==3.1.0
